# Financials

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/dependencies/: db_dependency.py
app/models/: __init__.py  beneficiaries_individual_model.py  individual_model.py  primary_category_model.py  queries.py  secondary_category_model.py  spenders_individual_model.py  spending_model.py  spending_secondary_category_model.py  split_arrangement_model.py  test_queries.py  tools.py
app/routes/: spending_route.py
app/schemas/: base_schema.py  beneficiaries_individual_schema.py  individual_schema.py  primary_category_schema.py  secondary_category_schema.py  spenders_individual_schema.py  spending_schema.py  spending_secondary_category_schema.py  split_arrangement_schema.py
app/services/db_services/: beneficiaries_individual_service.py  individual_service.py  pirmary_category_service.py  secondary_category_service.py  spenders_individual_service.py  spending_secondary_category_service.py  spending_service.py  split_arrangement_service.py
app/utils/: files.py
backend/services/: claude_service.py
database/: drop_all.sql  init_table.sql  init_triggers.sql  test_insertion.sql  test_queries.sql  test_update.sql
orm/: db_config.py  models.py  mutations.py  test_creation.py
sql/: init_table.sql  test_insertion.sql
tests/: conftest.py
tests/db_tests/: test_individual.py  test_primary_category.py  test_secondary_category.py  test_spending.py  test_split_arrangement.py
tests/test_data/json/: td_individual.json  (+5 more)
